# ledger-zcash-utils

./: CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
.cargo/: config.toml
.changeset/: ironwood-pool-sync.md  metal-ravens-obey.md  mixed-transparent-orchard-finalize.md  nu6-2-dependency-bump.md  nu63-crate-bump.md  orchard-finalize-broadcast.md  orchard-send-build-transaction.md  orchard-spend-transparent-change.md  parse-pczt.md  shardtree-witness-computation.md  silly-eagles-jump.md  social-cars-double.md  stable-transaction-crafting.md  transparent-inputs-v5-builder.md
.github/workflows/: build-test.yml  publish-release.yml
crates/zcash-cli/: Cargo.toml
crates/zcash-cli/src/: main.rs
crates/zcash-cli/tests/: cli_integration.rs
crates/zcash-crypto/: Cargo.toml
crates/zcash-crypto/src/: craft.rs  decrypt.rs  error.rs  finalize.rs  keys.rs  lib.rs  network.rs  parse.rs  tree.rs
crates/zcash-crypto/tests/: ironwood_known_vector.rs  known_vectors.rs
crates/zcash-ffi-mobile/: Cargo.toml  build.rs
crates/zcash-ffi-mobile/src/: lib.rs  zcash.udl
crates/zcash-ffi-node/: Cargo.toml
crates/zcash-ffi-node/src/: lib.rs
crates/zcash-grpc/: Cargo.toml
crates/zcash-grpc/src/: client.rs  lib.rs  sync.rs
crates/zcash-sync/: Cargo.toml
crates/zcash-sync/src/: client.rs  craft.rs  lib.rs  sync.rs  witness.rs
crates/zcash-sync/tests/: capture_ironwood_witness_vector.rs  capture_witness_vector.rs  integration_sync.rs
docs/: architecture.md  block-sync.md  build-targets.md  ffi-mobile.md  ffi-node.md
examples/: bench.ts  sync-tx.node.ts
scripts/: build-android.sh  build-ios.sh
