[workspace]
resolver = "2"
members = [
    "crates/zcash-crypto",
    "crates/zcash-sync",
    "crates/zcash-ffi-node",
    "crates/zcash-cli",
]
default-members = ["crates/zcash-crypto"]

# ──────────────────────────────────────────────────────────────────────────────
# Shared dependency versions — all crates inherit from here.
# Individual crates may add extra features on top (e.g. lightwalletd-tonic).
# ──────────────────────────────────────────────────────────────────────────────
[workspace.dependencies]

# Zcash ecosystem
zcash_client_backend  = { version = "0.23", default-features = false }
zcash_keys            = { version = "0.14", features = ["orchard", "sapling"] }
# Note: `transparent-inputs` is now a default feature of zcash-crypto.
zcash_address         = "0.12"
zcash_note_encryption = "0.4"
zcash_primitives      = { version = "0.28", default-features = false }
# Transparent-pool address + script types; pulled by zcash_primitives internally
# under the local alias `transparent`. We depend on it directly to avoid that alias.
zcash_transparent     = "0.8"
zcash_protocol        = "0.9"
zip32                 = "0.2"
orchard               = { version = "0.14", default-features = false }
sapling-crypto        = { version = "0.7", default-features = false }

# Async / gRPC (only zcash-sync and its dependents need these)
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
tonic = { version = "0.14", features = ["codegen", "transport", "tls-native-roots", "tls-ring"] }

# FFI
napi         = { version = "2.16", features = ["async"] }
napi-derive  = "2.16"

# Key derivation
bip39     = "2"
bitcoin   = "0.32"
# secp256k1 0.29.x is already in Cargo.lock (transitive via bitcoin + zcash_transparent).
# Declared explicitly here so zcash-crypto can name the secp256k1::PublicKey that
# zcash_primitives::Builder::add_transparent_p2pkh_input expects.
secp256k1 = { version = "0.29", features = ["alloc"] }

# Parallelism
rayon   = "1"
futures = "0.3"

# Merkle tree for on-demand witness computation.
# Must stay version-compatible with the transitive copies pulled by orchard
# and zcash_client_backend (locked at 0.8.2 / 0.6.2 in Cargo.lock).
incrementalmerkletree = "0.8"
shardtree             = "0.6"

# Partially Created Zcash Transaction format (wire format + role helpers).
# Used to (a) wrap the PcztParts returned by zcash_primitives::Builder::build_for_pczt,
# (b) drive the IoFinalizer + Prover roles, (c) emit the canonical PCZT byte stream.
pczt = { version = "0.7", default-features = false, features = [
    "std", "orchard", "transparent", "zcp-builder", "io-finalizer", "prover",
    "signer", "tx-extractor", "spend-finalizer",
] }

# RNG plumbing for build_for_pczt(rng, &fee) and the PCZT Prover.
rand      = "0.8"
rand_core = "0.6"

# Utilities
anyhow     = "1"
thiserror  = "1"
hex        = "0.4"
uuid       = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
time       = { version = "0.3", features = ["std"] }
clap       = { version = "4", features = ["derive"] }

# Test utilities (dev-only)
assert_cmd = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
