[workspace]
resolver = "2"
members = [
    "crates/zcash-crypto",
    "crates/zcash-sync",
    "crates/zcash-ffi-node",
    "crates/zcash-cli",
]
default-members = ["crates/zcash-crypto"]

# ──────────────────────────────────────────────────────────────────────────────
# Shared dependency versions — all crates inherit from here.
# Individual crates may add extra features on top (e.g. lightwalletd-tonic).
# ──────────────────────────────────────────────────────────────────────────────
[workspace.dependencies]

# Zcash ecosystem
#
# Ironwood (NU6.3) pin: `zcash_client_backend` carries the wallet-side
# Ironwood API, which is not yet published to crates.io, so it is pinned to a
# librustzcash `main` commit. Within that repo `zcash_client_backend`,
# `zcash_keys`, `zcash_primitives`, `zcash_protocol`, `zcash_transparent`,
# `zcash_address` and `pczt` are intra-workspace *path* dependencies of one
# another — pinning only `zcash_client_backend` to git while leaving its
# siblings on crates.io produces two distinct copies of each sibling crate
# (same version number, different source: git-path vs crates.io registry),
# which Rust treats as unrelated types at any API boundary crossing them
# (confirmed by the duplicate-type errors the bump produced before this fix).
# All of them are therefore pinned to the SAME rev. `orchard`, `sapling-crypto`,
# `shardtree` and `incrementalmerkletree` stay on crates.io because
# librustzcash's own workspace also consumes those as ordinary crates.io
# dependencies (not path members), so a single crates.io version resolves
# consistently on both sides. Re-pin explicitly (never a floating branch) once
# the wallet-side crates are published.
zcash_client_backend  = { git = "https://github.com/zcash/librustzcash", rev = "a97a3d5f46d096b94ceb71271c7d38f20af4e1f1", default-features = false }
zcash_keys            = { git = "https://github.com/zcash/librustzcash", rev = "a97a3d5f46d096b94ceb71271c7d38f20af4e1f1", features = ["orchard", "sapling"] }
# Note: `transparent-inputs` is now a default feature of zcash-crypto.
zcash_address         = { git = "https://github.com/zcash/librustzcash", rev = "a97a3d5f46d096b94ceb71271c7d38f20af4e1f1" }
zcash_note_encryption = "0.4"
zcash_primitives      = { git = "https://github.com/zcash/librustzcash", rev = "a97a3d5f46d096b94ceb71271c7d38f20af4e1f1", default-features = false }
# Transparent-pool address + script types; pulled by zcash_primitives internally
# under the local alias `transparent`. We depend on it directly to avoid that alias.
zcash_transparent     = { git = "https://github.com/zcash/librustzcash", rev = "a97a3d5f46d096b94ceb71271c7d38f20af4e1f1" }
zcash_protocol        = { git = "https://github.com/zcash/librustzcash", rev = "a97a3d5f46d096b94ceb71271c7d38f20af4e1f1" }
zip32                 = "0.2"
orchard               = { version = "0.15", default-features = false }
sapling-crypto        = { version = "0.7", default-features = false }
# Field-element trait (`PrimeField::to_repr`) used to serialize the Orchard
# spend-auth randomizer `alpha` back to bytes when parsing a PCZT. Pinned to the
# same 0.13 line that `orchard` already depends on (no lockfile churn).
ff                    = "0.13"
# Transparent script (de)serialization: the `Evaluable::to_bytes` trait used to
# read a PCZT input/output `script_pubkey` back to raw bytes. Pinned to the 0.4
# line already pulled transitively by `zcash_transparent`.
zcash_script          = "0.4"

# Async / gRPC (only zcash-sync and its dependents need these)
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
tonic = { version = "0.14", features = ["codegen", "transport", "tls-native-roots", "tls-ring"] }

# FFI
napi         = { version = "2.16", features = ["async"] }
napi-derive  = "2.16"

# Key derivation
bip39     = "2"
bitcoin   = "0.32"
# secp256k1 0.29.x is already in Cargo.lock (transitive via bitcoin + zcash_transparent).
# Declared explicitly here so zcash-crypto can name the secp256k1::PublicKey that
# zcash_primitives::Builder::add_transparent_p2pkh_input expects.
secp256k1 = { version = "0.29", features = ["alloc"] }

# Parallelism
rayon   = "1"
futures = "0.3"

# Merkle tree for on-demand witness computation.
# Must stay version-compatible with the transitive copies pulled by orchard
# and zcash_client_backend (locked at 0.8.2 / 0.6.2 in Cargo.lock).
incrementalmerkletree = "0.8"
shardtree             = "0.6"

# Partially Created Zcash Transaction format (wire format + role helpers).
# Used to (a) wrap the PcztParts returned by zcash_primitives::Builder::build_for_pczt,
# (b) drive the IoFinalizer + Prover roles, (c) emit the canonical PCZT byte stream.
# Pinned to the same librustzcash `main` rev as the rest of the family (see
# above): the published pczt 0.7.0 requires orchard "0.14" / zcash_transparent
# "0.8" / zcash_primitives "0.28", incompatible with the NU6.3 bump.
pczt = { git = "https://github.com/zcash/librustzcash", rev = "a97a3d5f46d096b94ceb71271c7d38f20af4e1f1", default-features = false, features = [
    "std", "orchard", "transparent", "zcp-builder", "io-finalizer", "prover",
    "signer", "tx-extractor", "spend-finalizer",
] }

# RNG plumbing for build_for_pczt(rng, &fee) and the PCZT Prover.
rand      = "0.8"
rand_core = "0.6"

# Utilities
anyhow     = "1"
thiserror  = "1"
hex        = "0.4"
uuid       = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
time       = { version = "0.3", features = ["std"] }
clap       = { version = "4", features = ["derive"] }

# Test utilities (dev-only)
assert_cmd = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
