[package]
name = "zcash-crypto"
version = "0.1.0"
edition = "2021"
description = "Pure Zcash cryptographic operations: key derivation, trial decryption, transaction decryption"
license = "MIT OR Apache-2.0"

[lib]
name = "zcash_crypto"
path = "src/lib.rs"

[features]
# Enables transparent (P2PKH) spend support in the V5 builder and the
# transparent key component in the UFVK produced by `derive_keys`.
# On by default so zcash-sync and zcash-ffi-node inherit it transitively.
default = ["transparent-inputs"]
transparent-inputs = ["zcash_keys/transparent-inputs", "zcash_primitives/transparent-inputs"]

[dependencies]
# zcash_client_backend: only the `orchard` feature is needed here.
# The `lightwalletd-tonic` feature (gRPC client + proto types) is NOT included
# so that this crate remains free of tonic/tokio and compiles cleanly for ffi targets.
zcash_client_backend  = { workspace = true, features = ["orchard"] }
zcash_keys            = { workspace = true }
zcash_address         = { workspace = true }
zcash_note_encryption = { workspace = true }
# `circuits` feature exposes Builder::build_for_pczt + zip317::FeeRule (needed by craft.rs).
zcash_primitives      = { workspace = true, features = ["circuits"] }
zcash_protocol        = { workspace = true }
zip32                 = { workspace = true }
# `circuit` feature exposes orchard::circuit::ProvingKey (needed by craft.rs).
orchard               = { workspace = true, features = ["circuit"] }
sapling-crypto        = { workspace = true }
bip39                 = { workspace = true }
bitcoin               = { workspace = true }
secp256k1             = { workspace = true }
hex                   = { workspace = true }
uuid                  = { workspace = true }
thiserror             = { workspace = true }
rayon                 = { workspace = true }
# Forces the `std` feature so zcash_client_backend can call OffsetDateTime::now_utc().
time                  = { workspace = true }
shardtree             = { workspace = true }
incrementalmerkletree = { workspace = true }
# PCZT wrapping + role driver for the V5 transaction builder.
pczt                  = { workspace = true }
rand                  = { workspace = true }
rand_core             = { workspace = true }
zcash_transparent     = { workspace = true }
